angular ui moved to the BProxy project, git ignore